--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node src/app.js",
+    "start": "nodemon index.js",
+    "dev": "nodemon src/app.js",
     "test": "jest"
   },
   "repository": {
