--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
     "nodemon": "^3.1.1",
     "supertest": "^7.0.0"
   }
