--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "nodemon index.js",
     "dev": "nodemon src/app.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint .",
+    "build": "webpack --config webpack.config.js",
+    "test:integration": "mocha tests/integration/**/*.js",
+    "test:e2e": "cypress run",
+    "test:regression": "mocha tests/regression/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +35,10 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "cypress": "^13.10.0",
+    "eslint": "^9.4.0",
+    "globals": "^15.3.0",
     "jest": "^29.7.0",
     "jest-html-reporters": "^3.1.7",
     "nodemon": "^3.1.1",
